2005-09-15	Benedikt Meurer <benny@xfce.org>

	* exo/exo-object.{c,h}, tests/test-exo-object.c, exo/Makefile.am,
	  exo/exo.h, exo/exo.symbols, tests/Makefile.am: Remove the ExoObject
	  class as it causes to much trouble, unfortunately. Maybe one day the
	  GType System and the various language bindings will be ready for this,
	  then we can re-add it.

2005-09-06	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c(exo_icon_view_set_model): Reset the item memory
	  chunk as a whole instead of freeing each item when the model is
	  reset.
	* exo/exo-icon-view.c(exo_icon_view_set_model): Don't schedule the
	  layouting if we're going to resize the view anyways.

2005-09-04	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c(find_item_page_up_down): Fix Page_Up handling.

2005-09-03	Benedikt Meurer <benny@xfce.org>

	* exo-csource/main.c(print_csource): Fix a small bug for platforms,
	  where size_t is different from unsigned int.

2005-09-02	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c(exo_icon_view_allocate_children): Increase the
	  area allocated to child widgets by focus-line-width and focus-padding.

2005-09-02	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c(exo_icon_view_get_path_at_pos): Actually accept
	  widget coordinates here, to be compatible with GtkTreeView.

2005-09-01	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c(exo_icon_view_dispose): Reset the drag destination
	  item as we use a tree row reference here, which can cause a memory
	  leak with custom DnD implementations.

2005-08-31	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.{c,h}, exo/exo.symbols: Add two new methods
	  exo_icon_view_widget_to_icon_coords() and
	  exo_icon_view_icon_to_widget_coords(), which are used to translate
	  between widget coordinates and icon window coordinates.
	* exo/exo-icon-view.c(exo_icon_view_get_dest_item_at_pos): Be consistent
	  with the other methods that accept (x,y) coordinates and use icon