@@ -1,3 +1,9 @@
+2005-10-17	Benedikt Meurer <benny@xfce.org>
+
+	* exo/exo-noop.{c,h}, exo/exo-utils.{c,h}, exo/Makefile.am, exo/exo.h,
+	  exo/exo.symbols: Move the exo_noop_* functions to exo-utils.
+	* exo/exo-utils.h: Add exo_atomic_* inline functions.
+
 2005-09-15	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-object.{c,h}, tests/test-exo-object.c, exo/Makefile.am,
